<resources>
    <string name="app_name">Smart Traffic</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="penalty_heading"><u>PENALTY</u>.</string>
</resources>
