<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#87ceeb"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/road3" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/username"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#123456"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#123456"
        android:text="Cancel"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#123456"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#123456"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>